--- a/30413/Ovidiu Florin Voivod/Lab03/3.2/Extra_lab03/Extra2.cbp
+++ b/30413/Ovidiu Florin Voivod/Lab03/3.2/Extra_lab03/Extra2.cbp
@@ -2,22 +2,21 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="3.2" />
+		<Option title="Extra2" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/3" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Extra2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="in.txt out2.txt" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/3" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Extra2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
